Correction de l'overflow du menu

--- a/targetWebKitchen/style.css
+++ b/targetWebKitchen/style.css
@@ -47,6 +47,10 @@ a:hover {
 
 /*****************************************************************/
 
+.hamburger.is-active:hover, .hamburger:hover{
+    opacity: 1;
+}
+
 header {
     padding-top: 25px;
     position: absolute;
